# spellbook-thoughtspot

./: .gitignore  README.md  pyproject.toml
src/spellbook/: __main__.py  _logging.py  _utils.py  auth.py  const.py  main.py  spellbook.py  thoughtspot.py  types.py
src/spellbook/components/: __init__.py  thoughtspot_sdk.py  toaster.py  utils.py
src/spellbook/components/shadcn/: shadcn.py  shadscripts.js
src/spellbook/routes/: login.py
src/spellbook/spells/: base.py
src/spellbook/spells/user/: bulk_manager.py  reveal_privileged_users.py
static/: style.css
